# model-bridge

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  model-bridge.toml  model-bridge.toml.example  providers.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-26-theme-redesign.md  2026-07-16-model-drift-detection.md  2026-07-23-ai-saas-reskin.md
docs/superpowers/specs/: 2026-06-26-theme-redesign-design.md  2026-07-16-model-drift-detection-design.md  2026-07-23-ai-saas-reskin-design.md
scripts/: install-user.sh
src/: config.rs  crypto.rs  main.rs  state.rs
src/admin/: mod.rs  provider_svc.rs  stats_svc.rs
src/db/: models.rs  schema.rs
src/middleware/: auth.rs
src/router/: admin.rs  mod.rs  models_list.rs  proxy.rs  proxy_route_tests.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  main.ts  theme.ts  utils.ts
web/src/views/: ApiKeys.vue  Dashboard.vue  Help.vue  Logs.vue  Providers.vue
