[package]
name = "model-bridge"
version = "0.5.4"
edition = "2021"
license = "MIT"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
tower = "0.5"
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
futures = "0.3"
bytes = "1"
include_dir = "0.7"
mime_guess = "2"
dirs = "5"

[dev-dependencies]
# 路由级 HTTP 行为测试（tests/proxy_route_tests）用的上游 mock 服务。dev-only，
# 不进入 release 二进制，不影响发布产物体积。
wiremock = "0.6"
